2006-06-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpguide.[ch]: derive from GObject, we don't need any
	GimpObject functionality here.  Declare "orientation" and "id"
	properties CONSTRUCT_ONLY, added a gimp_guide_new() function and
	emit notify on position changes.

	* app/core/gimpimage-guides.c: use gimp_guide_new() to instantiate
	guides.

	* app/core/gimpimage.c (gimp_image_get_memsize): formatting.

2006-06-07  Michael Natterer  <mitch@gimp.org>

	* app/actions/context-commands.c: cosmetic cleanup.

	* app/core/core-types.h: move the GimpGuide typedef to the
	"misc objects" section.

	* app/tools/gimpforegroundselecttool.c: cosmetic cleanup.

	* app/tools/gimpmeasuretool.c (gimp_measure_tool_cursor_update):
	use the new corner and side cursors instead of using X cursors.

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): renamed local variable
	"update_cursor" to "update_sw_cursor", it has confused me too
	often...

2006-06-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpguide.[ch]: new files, implementing GimpGuide as a
	GimpObject

	* app/core/Makefile.am: add new files as sources

	* app/core/gimpimage-guides.[ch]: use the new object instead of
	defining GimpGuide here as a struct.
	
	* app/core/gimpimage-crop.c
	* app/core/gimpimage-duplicate.c
	* app/core/gimpimage-flip.c
	* app/core/gimpimage-resize.c
	* app/core/gimpimage-rotate.c
	* app/core/gimpimage-scale.c
	* app/core/gimpimage-snap.c
	* app/core/gimpimage-undo-push.c
	* app/core/gimpimage.c
	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell.c
	* app/tools/gimpmovetool.c
	* app/xcf/xcf-save.c
	* tools/pdbgen/pdb/guides.pdb: include "core/gimpguide.h", and use
	g_object_ref/unref instead of gimp_image_guide_ref/unref.

	* app/pdb/guides_cmds.c: regenerated.

2006-06-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_initialize):
	initialize guide with the option's guide value.