@@ -146,7 +146,6 @@ gimp_image_resize_with_layers (GimpImage    *image,
       GimpItem *item = list->data;
       gint      old_offset_x;
       gint      old_offset_y;
-      gboolean  resize;
 
       gimp_item_offsets (item, &old_offset_x, &old_offset_y);
 
@@ -164,14 +163,11 @@ gimp_image_resize_with_layers (GimpImage    *image,
   g_list_free (resize_layers);
 
   /*  Reposition or remove all guides  */
-  list = image->guides;
-  while (list)
+  for (list = image->guides; list; list = g_list_next (list))
     {
       GimpGuide *guide        = list->data;
       gboolean   remove_guide = FALSE;
       gint       new_position = guide->position;
-
-      list = g_list_next (list);
 
       switch (guide->orientation)
         {
@@ -198,15 +194,12 @@ gimp_image_resize_with_layers (GimpImage    *image,
     }
 
   /*  Reposition or remove sample points  */
-  list = image->sample_points;
-  while (list)
+  for (list = image->sample_points; list; list = g_list_next (list))
     {
       GimpSamplePoint *sample_point        = list->data;
       gboolean         remove_sample_point = FALSE;
       gint             new_x               = sample_point->x;
       gint             new_y               = sample_point->y;
-
-      list = g_list_next (list);
 
       new_y += offset_y;
       if ((sample_point->y < 0) || (sample_point->y > new_height))
